# hangman-app

./: pyproject.toml
.github/workflows/: main.yaml
app/: hangman.py
tests/: test_hangman.py
