[project]
name = "hangman-app"
version = "0.1.0"
description = ""
authors = [
    {name = "polshabyaka",email = "polshabyaka@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
